[package]
name = "rlm"
version = "0.0.2-alpha.0"
description = "rapidllm core LLM command line interface."
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tiktoken-rs = "0.7.0"
